[project]
name = "smallangle"
version = "0.1.0"
description = "Calculate sin and tan values using the small-angle approximation."
readme = "README.md"
authors = [
    { name = "Annelies Vlaar", email = "66774020+AnneliesVlaar@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = ["click>=8.3.0", "numpy>=2.2.6", "pandas>=2.3.2"]

[project.scripts]
smallangle = "smallangle:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
